- Clipping fixes for the header

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body.scott {
 	color: #000;
 	display: block;
 	font-size: inherit;
+	height: 28px;
 	left: 0;
 	overflow: visible;
 	padding: 0;
